all routes done, login and logout done
