# routes/index.js
@@ -1,14 +1,19 @@
 //...This is the routes/index.js file...
 
 const router = require('express').Router();
+const passport = require('passport');
 
 router.use('/', require('./swagger'));
-
-router.get('/', (req, res) => {
-    //#swagger.tags=['Hello World, swagger data on home page']
-res.send('Hello World, this is the data on the home page');
-});
-
 router.use('/users', require('./users'));
+router.use('/blogs', require('./blogs'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
