# routes/users.js
@@ -5,19 +5,21 @@ const router = express.Router();
 
 const usersController = require('../controllers/users');
 
+const { isAuthenticated } = require('../middleware/authenticate');
+
 // GET all users
-router.get('/', usersController.getAll);
+router.get('/', usersController.getAllUsers);
 
 // GET a single user by ID
-router.get('/:id', usersController.getSingle);
+router.get('/:id', usersController.getSingleUser);
 
 // POST a new user
-router.post('/', usersController.createUser);
+router.post('/', isAuthenticated, usersController.createUser);
 
 // PUT (update) a user by ID
-router.put('/:id', usersController.updateUser);
+router.put('/:id', isAuthenticated, usersController.updateUser);
 
 // DELETE a user by ID
-router.delete('/:id', usersController.deleteUser);
+router.delete('/:id', isAuthenticated, usersController.deleteUser);
 
 module.exports = router;
